@@ -39,11 +39,16 @@ public class PieceGroup {
         if (pieces.isEmpty()) {
             return null;
         }
-        return pieces.get(0).getPosition();
+        return path.getLast();
     }
 
     // --- Setter --- //
     // 새로 병합된 말의 path로 갱신
+    public void setPiecesPath(List<Cell> newPath) {
+        for(Piece p : pieces){
+            p.setPath(newPath);
+        }
+    }
     private void setGroupPath(Piece newPiece) {
         path = newPiece.getPath();
     }
@@ -86,23 +91,33 @@ public class PieceGroup {
         // 그룹에 있는 모든 말들을 dest Cell로 이동
         for (Piece piece : pieces) {
             piece.moveTo(nextCell);
-            setGroupPath(piece);
         }
+        setGroupPath(pieces.get(0));
     }
 
     public Cell backToPrevious() {
+        System.out.println("bye");
         if (path.size() < 2) {
             throw new IllegalStateException("더 이상 뒤로 돌아갈 수 없습니다."); // 이거 어칼까?
-        }
-        if(path.size() > 2){
+        } else if(path.size() > 2){
             // 마지막 기록 제거
-            path.remove(path.size() - 1);
+            path.removeLast();
+            // 돌아갈 이전 Cell
+            Cell prev = path.getLast();
+            path.removeLast();
+            // 그룹 내 모든 말들 경로 중간 업데이트
+            setPiecesPath(path);
+            // 실제 위치 업데이트
+            moveGroupTo(prev);
         } // else: path가 startCell, 첫 번째 cell인 경우는 첫 번째 cell을 삭제하지 않음
-
-        // 이전 셀
-        Cell prev = path.get(path.size() - 1);
-        // 실제 위치 업데이트
-        moveGroupTo(prev);
+        else{ // 도 위치(E0_0)에서 빽도 나온 상황
+            moveGroupTo(path.get(0));
+        }
+        System.out.println("빽도 이후 경로: ");
+        for(Cell c : path){
+            System.out.print(c.getId() + " ");
+        }
+        System.out.println();
         return getCurrentCell();
     }
 
